# refractiveindex

./: README.md  pyproject.toml
.github/workflows/: build-ci.yml
refractiveindex/: catalog_to_csv.py  catalog_to_sqlite.py  download_material.py  refractiveindex.py  sort_pages.py
