[tool.poetry]
name = "refractiveindex"
version = "0.0.1"
description = "A python interface to the refractiveindex.info database."
authors = ["ke.li <wh-like@foxmain.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.9.3"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"